# FantasyMapGenerator

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  MIGRATION.md  README.md  index.html
.github/workflows/: deploy-rust-pages.yml  rust.yml  web.yml
assets/: Line2-LEqI_yuG.js  LineGeometry-CGPjmGg1.js  LineSegments2-BgNs-F4B.js  LineSegmentsGeometry-DXAYdf5_.js  MapControls-CGrdTP_B.js  fantasy_map_generator-BFQFQIdH.js  fantasy_map_generator_bg-5nRUsGaE.wasm  index-B-Az2zYJ.js  index-BfGfgxCF.css  mapGenerator.worker-BZjEdlHb.js  react-vendor-Tbk58cWh.js  svgRender.worker-1EMLVNg-.js  three.core-BNB4Ck46.js  three.module-D641GEG5.js  three.tsl-C3_9mTSV.js  three.webgpu-CHctoAnc.js  ui-vendor--fjXXbQD.js
baseline/: README.md  reference.json
docs/: CPP.md
rust/: .gitignore  AGENTS.md  COMMENTING_GUIDE.md  Cargo.toml  README.md  build-wasm.bat  build-wasm.sh
rust/apps/web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
rust/apps/web/public/: map-data.json
rust/apps/web/src/: App.tsx  index.css  wasm-bridge.ts
rust/apps/web/src/components/: ConfigPanel.tsx  Header.tsx  LayerToolbar.tsx  MapViewer.tsx  MapViewer3D.tsx
rust/apps/web/src/hooks/: useMapData.ts
rust/apps/web/src/i18n/: en.ts  index.ts  zh.ts
rust/apps/web/src/store/: mapStore.ts
rust/apps/web/src/types/: map.ts
rust/benches/: map_generation_bench.rs
rust/crates/cli/: Cargo.toml  README.md
rust/crates/cli/src/: main.rs
rust/crates/core/: Cargo.toml  README.md
rust/crates/core/src/: delaunay.rs  extents2d.rs  font_face.rs  geometry.rs  lib.rs  main.rs  map_data.rs  map_generator.rs  node_map.rs  poisson_disc.rs  spatial_point_grid.rs  vertex_map.rs  voronoi.rs
rust/crates/core/tests/: snapshot_test.rs
rust/crates/renderer-svg/: Cargo.toml  README.md
rust/crates/renderer-svg/src/: lib.rs
rust/crates/renderer-wasm/: Cargo.toml  README.md
rust/crates/renderer-wasm/src/: lib.rs
rust/examples/: .gitignore  .gitkeep  .oxfmtrc.json  .oxlintrc.json  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.ts  tsconfig.app.json  vite.config.ts
rust/examples/pkg/: .gitignore  fantasy_map_generator.d.ts  fantasy_map_generator.js  fantasy_map_generator_bg.wasm  fantasy_map_generator_bg.wasm.d.ts  package.json
rust/examples/src/: App.tsx  main.tsx  theme.ts
rust/examples/src/components/: ControlPanel.tsx  LayerControl.tsx  LoadingOverlay.tsx  MapRenderer.tsx  MapStats.tsx  StatusBar.tsx  TopToolbar.tsx
rust/examples/src/hooks/: useMapGenerator.ts
rust/examples/src/lib/: FantasyMapCanvasRenderer.ts  FantasyMapThreeRenderer.ts  download.ts  i18n.ts  language.ts  mapScenePacket.ts  presentationPreset.ts  standardMapSvg.ts  svgBuilder.ts  svgTerrainBuilder.ts
rust/examples/src/styles/: index.css
rust/examples/src/types/: map.ts
rust/examples/src/workers/: mapGenerator.worker.ts  svgRender.worker.ts
rust/fantasy_map_generator/: Cargo.toml
rust/fantasy_map_generator/src/: config.rs  dcel.rs  main.rs  map_generator.rs  rand.rs
rust/fantasy_map_generator/src/render/: mod.rs
rust/fantasy_map_generator/tests/: snapshot_test.rs
rust/src/: cli.rs  config.rs  lib.rs  main.rs  map_generator.rs  satellite_svg.rs  standard_svg.rs  wasm.rs
rust/src/algorithms/: delaunay.rs  mod.rs  poisson_disc.rs  voronoi.rs
rust/src/data_structures/: dcel.rs  extents2d.rs  geometry.rs  mod.rs  node_map.rs  spatial_point_grid.rs  vertex_map.rs
rust/src/presentation/: mod.rs  standard_svg.rs  webgpu.rs
rust/src/render/: config.rs  error.rs  mod.rs  primitives.rs  renderer.rs  tests.rs  text.rs
rust/src/render/shaders/: circle.wgsl  line.wgsl
rust/src/utils/: font_face.rs  mod.rs  rand.rs
rust/tests/: map_generator_test.rs  snapshot_test.rs
rust/tests/baselines/: baseline_output.json
scripts/: build-wasm.ps1  build-wasm.sh  build_cpp.bat  build_cpp.sh  build_rust.bat  build_rust.sh
src/: config.cpp  config.rs  dcel.cpp  dcel.h  dcel.rs  delaunay.cpp  delaunay.rs  fontface.cpp  fontface.h  geometry.rs  main.cpp  main.rs  map_generator.rs  mapgenerator.cpp  mapgenerator.h  nodemap.h  poisson_disc.rs  poissondiscsampler.cpp  render.cpp  render.h  render.rs  resources.h  vertexmap.cpp  vertexmap.h  voronoi.rs
src/argtable3/: argtable3.c
