[package]
name = "fantasy_map_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command-line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Random number generation
rand = "0.8"
rand_chacha = "0.3"  # For deterministic seeding

# WebGPU rendering
wgpu = "22.0"
pollster = "0.3"

# Image processing
image = "0.25"

# Math and geometry
nalgebra = "0.33"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing utilities
approx = "0.5"  # For floating-point comparison
serde_json = "1.0"

[[bin]]
name = "map_generation"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
