[package]
name = "fantasy_map_generator"
version = "0.1.0"
edition = "2021"

[lib]
name = "fantasy_map_generator"
path = "src/lib.rs"

[[bin]]
name = "map_generation"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# WebGPU 渲染依赖（可选）
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
image = { version = "0.24", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

[features]
default = []
render = ["wgpu", "pollster", "image", "bytemuck"]

[dev-dependencies]
approx = "0.5"
