[package]
name = "fantasy_map_generator"
version = "0.1.0"
edition = "2021"

[lib]
name = "fantasy_map_generator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "map_generation"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
base64 = { version = "0.22", optional = true }

# WebGPU 渲染依赖（可选）
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"], optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

# WASM 依赖
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = []
render = ["wgpu", "pollster", "image", "bytemuck"]
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook", "wee_alloc", "image", "base64"]

[dev-dependencies]
approx = "0.5"
