[package]
name = "fantasy_map_generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "map_generation"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
approx = "0.5"
