[package]
name = "fantasy-map-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "map_generation"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }

[dev-dependencies]
approx = "0.5"
